Fixed spacing, added a border to the links and made the images better sizes

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 }
 
 .links {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
