--- a/src/components/section.css
+++ b/src/components/section.css
@@ -10,9 +10,12 @@
     width: 100%;
     background-color: #ffffff;
     scroll-behavior: smooth;
-    /* margin: 0 auto; */
     border: 0;
     font-family: mainFont, sans-serif;
+    min-height: 100px;
+}
+.section-content-* {
+    padding: 0.3em;
 }
 
 .section-content :hover {
@@ -26,11 +29,11 @@
 .section-item {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 1px solid #000000;
     border-radius: 12px;
     margin: 0 auto;
-    padding: 1% 0.5%;
+    padding: 1% 1%;
     width: 100%;
     height: 100px;
     font-size: 25px;
@@ -45,7 +48,6 @@
 
 .section-item img {
     display: flex;
-    padding: 0.5em;
     width: 100px;
     height: 100%;
 }
@@ -55,15 +57,15 @@
     font-family: mainFont, sans-serif;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     border: 1px solid #000000;
     border-radius: 12px;
-    width: 100%;
     height: 100px;
     font-size: 25px;
     align-items: center;
     margin-bottom: 10px;
     box-shadow: 0px 4px 4px 0px #00000040;
+    padding-right: 1%;
 }
 
 .section-item-popup img {
@@ -83,12 +85,13 @@
     scroll-behavior: smooth;
     margin: 0 auto;
     padding: 0;
-    border: 0;
     font-family: mainFont, sans-serif;
     overflow: scroll;
     font-size: larger;
     -ms-overflow-style: none;
     -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+    border-bottom: 1px dashed #000000;
 }
 
 .color-layer {
@@ -115,7 +118,6 @@
     display: flex;
     padding: 20px;
     flex-direction: column;
-
 }
 
 @media screen and (max-width: 1200px) {
